--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,27 @@
 {
-    "name": "makii/parser-commerce-ml",
+    "name": "makiintoch/parser-commerce-ml",
     "authors": [
         {
             "name": "Kremenchuk Igor",
             "email": "makiintoch@gmail.com"
         }
     ],
-    "require": {}
+    "license": "MIT",
+    "require": {
+        "php": "^7.2",
+        "ext-SimpleXML": "*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    }
 }
