--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "ext-SimpleXML": "*"
+        "ext-SimpleXML": "*",
+        "symfony/finder": "^4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.5",
