--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "ExchangeCommerceML\\Tests\\": "tests/"
         }
     }
 }
