--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,11 @@
         "psr-4": {
             "ExchangeCommerceML\\Tests\\": "tests/"
         }
+    },
+    "minimum-stability": "dev",
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1-dev"
+        }
     }
 }
